--- a/ControleEstoque.Web/Content/Site.css
+++ b/ControleEstoque.Web/Content/Site.css
@@ -1,5 +1,5 @@
 ﻿body {
-    padding-top: 50px;
+    padding-top: 100px;
     padding-bottom: 20px;
 }
 
@@ -21,4 +21,21 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.container {
+    /*width: 400px;*/
+    margin: 0 auto;
+}
+
+.titulo{
+    margin-bottom: 30px;
+    text-transform: uppercase;
+}
+
+@media (min-width: 992px) {
+
+    body{
+        padding-top: 50px;
+    }
 }
