--- a/ControleEstoque.Web/Views/Shared/_Layout.cshtml
+++ b/ControleEstoque.Web/Views/Shared/_Layout.cshtml
@@ -20,64 +20,89 @@
                 @Html.ActionLink("Controle de Estoque", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cadastros
-                            <span class="caret">
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Grupos de Produtos", "GrupoProduto", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Marcas de Produtos", "MarcaProduto", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Locais de Armazenamento", "LocalProduto", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Unidades de Medida", "UnidadeMedida", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Produtos", "Produto", "Cadastro")</li>
-                                    <li class="nav-divider"></li>
-                                    <li>@Html.ActionLink("Países", "Pais", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Estados", "Estado", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Cidades", "Cidade", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Fornecedores", "Fornecedor", "Cadastro")</li>
-                                    <li class="nav-divider"></li>
-                                    <li>@Html.ActionLink("Perfis de Usuarios", "PerfilUsuario", "Cadastro")</li>
-                                    <li>@Html.ActionLink("Usuarios", "Usuario", "Cadastro")</li>
-                                </ul>
-                            </span>
-                        </a> 
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Operações
-                            <span class="caret">
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Entrada de Produtos", "EntradaEstoque", "Operacao")</li>
-                                    <li>@Html.ActionLink("Saída de Produtos", "SaidaEstoque", "Operacao")</li>
-                                    <li>@Html.ActionLink("Lançamento de Perdas de Produtos", "LancPerdaProduto", "Operacao")</li>
-                                    <li>@Html.ActionLink("Inventário de Estoque", "Inventario", "Operacao")</li>
-                                </ul>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Relatórios
-                            <span class="caret">
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Posição de Estoque", "PosicaoEstoque", "Relatorio")</li>
-                                    <li>@Html.ActionLink("Ressuprimento", "Ressuprimento", "Relatorio")</li>
-                                </ul>
-                            </span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gráficos
-                            <span class="caret">
-                                <ul class="dropdown-menu">
-                                    <li>@Html.ActionLink("Perdas por Mês", "PerdasMes", "Grafico")</li>
-                                    <li>@Html.ActionLink("Entradas vs Saídas por Mês", "EntradaSaidaMes", "Grafico")</li>
-                                </ul>
-                            </span>
-                        </a>
-                    </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
-                </ul>
+                @if (Request.IsAuthenticated)
+                {
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Cadastros
+                                <span class="caret">
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Grupos de Produtos", "GrupoProduto", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Marcas de Produtos", "MarcaProduto", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Locais de Armazenamento", "LocalProduto", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Unidades de Medida", "UnidadeMedida", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Produtos", "Produto", "Cadastro")</li>
+                                        <li class="nav-divider"></li>
+                                        <li>@Html.ActionLink("Países", "Pais", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Estados", "Estado", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Cidades", "Cidade", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Fornecedores", "Fornecedor", "Cadastro")</li>
+                                        <li class="nav-divider"></li>
+                                        <li>@Html.ActionLink("Perfis de Usuarios", "PerfilUsuario", "Cadastro")</li>
+                                        <li>@Html.ActionLink("Usuarios", "Usuario", "Cadastro")</li>
+                                    </ul>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Operações
+                                <span class="caret">
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Entrada de Produtos", "EntradaEstoque", "Operacao")</li>
+                                        <li>@Html.ActionLink("Saída de Produtos", "SaidaEstoque", "Operacao")</li>
+                                        <li>@Html.ActionLink("Lançamento de Perdas de Produtos", "LancPerdaProduto", "Operacao")</li>
+                                        <li>@Html.ActionLink("Inventário de Estoque", "Inventario", "Operacao")</li>
+                                    </ul>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Relatórios
+                                <span class="caret">
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Posição de Estoque", "PosicaoEstoque", "Relatorio")</li>
+                                        <li>@Html.ActionLink("Ressuprimento", "Ressuprimento", "Relatorio")</li>
+                                    </ul>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Gráficos
+                                <span class="caret">
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Perdas por Mês", "PerdasMes", "Grafico")</li>
+                                        <li>@Html.ActionLink("Entradas vs Saídas por Mês", "EntradaSaidaMes", "Grafico")</li>
+                                    </ul>
+                                </span>
+                            </a>
+                        </li>
+                        <li>@Html.ActionLink("Sobre", "Sobre", "Home")</li>
+                        <li>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                Bem-Vindo @User.Identity.Name
+                                <span class="caret">
+                                    <ul class="dropdown-menu">
+                                        @using (Html.BeginForm("LogOff", "Conta", FormMethod.Post, new { id = "logoffForm" }))
+                                        {
+                                            <li><a href="javascript:document.getElementById('logoffForm').submit()">Sair</a></li>
+                                        }
+                                    </ul>
+                                </span>
+                            </a> 
+                        </li>
+                        
+                    </ul>
+                }
+                else
+                {
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>@Html.ActionLink("Login", "Login", "Conta")</li>
+                    </ul>
+                }
             </div>
         </div>
     </div>
